2025/ingress-migration/ingressClassDemo.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: demo
spec:
  controller: suse.com/demo
