2025/ingress-migration/ingressMigrationClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: migration
spec:
  controller: rke2.com/migration
