2025/ingress-migration/app.yaml
# app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-migration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: test-migration
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: test-migration
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: whoami
