2025/ingress-migration/ingress-cookie.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookie-example
  namespace: test-migration
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "test-traefik-cookie"
    
spec:
  ingressClassName: demo
  rules:
  - host: cookie.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80

# curl -v -c cookie-jar.txt -H "Host: cookie.example.com" http://10.43.69.48
# for i in {1..5}; do curl -s -b cookie-jar.txt -H "Host: cookie.example.com" http://10.43.69.48 | grep Hostname: ; sleep 0.5; done
