2025/ingress-migration/one-annotations-test.yaml
# one-annotation-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one-annotation
  namespace: test-migration
  annotations:
    # Nginx annotation for forced redirect
    # automatically redirects all incoming HTTP traffic to its corresponding HTTPs endpoint
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - oneannotation.example.com
    # Does not have to exist
    secretName: dummy-tls-secret
  rules:
  - host: oneannotation.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
