2025/ingress-migration/simple-test.yaml
# simple-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-simple-nginx
  namespace: test-migration
spec:
  ingressClassName: nginx
  rules:
  - host: simple.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
